# mentalmodel

./: .gitignore  .pre-commit-config.yaml  PLAN-PT2.md  PLAN-PT3.md  PLAN.md  README.md  REMOTE-SERVICE-PRODUCTIZATION-PLAN.md  RUNTIME-ENVIRONMENT-CLI-BINDING.md  docs.json  index.mdx  installation.mdx  introduction.mdx  pyproject.toml  quickstart.mdx
agents/: autoresearch.mdx  skills.mdx
cli/: check.mdx  demo.mdx  docs.mdx  doctor.mdx  graph.mdx  install-skills.mdx  otel.mdx  overview.mdx  projects.mdx  remote.mdx  replay.mdx  runs.mdx  ui.mdx  verify.mdx
concepts/: current-package-model.mdx  invariants.mdx  ir.mdx  plugins.mdx  primitives.mdx  runtime.mdx
docs/: 4-13-26-async-ingestion-plan.md  adr-remote-runs-phase0.md  otel-self-hosted.md  pangramanizer-migration-learnings.md
guides/: authoring-workflows.mdx  custom-views.mdx  dashboard-ui.mdx  effects-and-actors.mdx  metrics.mdx  optimization.mdx  parallel-and-join.mdx  remote-migration.mdx  reusable-blocks.mdx  runtime-contexts.mdx  runtime-environments.mdx  step-loops.mdx
observability/: debugging.mdx  opentelemetry.mdx  run-bundles.mdx
scripts/: remote_ui_acceptance.py
tests/: test_agent_tool_use_demo.py  test_analysis.py  test_async_rl_demo.py  test_blocks.py  test_cli.py  test_dashboard_metrics.py  test_docs.py  test_docs_site.py  test_doctor.py  test_executor.py  test_live_ingestion.py  test_lowering.py  test_managed_execution.py  test_metrics.py  test_observability.py  test_optimization.py  test_remote_backend.py  test_remote_bootstrap.py  test_remote_contracts.py  test_remote_events.py  (+15 more)
(+186 files in other folders)
