[project]
name = "mentalmodel"
version = "0.1.0"
description = "Semantic program modeling for recoverable topology, causality, and state."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "opentelemetry-api>=1.38.0,<2",
  "opentelemetry-sdk>=1.38.0,<2",
]

[dependency-groups]
dev = [
  { include-group = "lint" },
  { include-group = "typecheck" },
  { include-group = "test" },
]
lint = [
  "pre-commit>=4.3.0,<5",
  "ruff>=0.15.0,<0.16",
]
typecheck = [
  "mypy>=1.18.2,<2",
]
test = [
  "pytest>=8.4.2,<9",
  "pytest-cov>=7.0.0,<8",
]

[project.scripts]
mentalmodel = "mentalmodel.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "B",
  "E",
  "F",
  "I",
  "UP",
  "W",
]

[tool.ruff.lint.isort]
known-first-party = ["mentalmodel"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
strict = true
pretty = true
show_error_codes = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
source = ["mentalmodel"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
